work with SPA details in comments

--- a/index.html
+++ b/index.html
@@ -17,7 +17,49 @@
       <h4>My Really Cool Blog Post</h4>
     </div>
 
-    <img src="images/museum-960.jpg" alt="placeholder"> <!-- changes default image to 960px width version created on derivv-->
+    <picture>
+      <source srcset="images/museum.jpg,
+                    images/museum-640x.jpg 2x,
+                    images/museum-960x.jpg 3x" 
+                    media="(max-width: 319px)" />
+
+      <source srcset="images/museum-320x.jpg,
+                    images/museum-640x.jpg 2x,
+                    images/museum-960x.jpg 3x" 
+                        media="(max-width: 320px)" />
+
+      <source srcset="images/museum-480x.jpg,
+                        images/museum-960x.jpg 2x,
+                        images/museum-1440x.jpg 3x" 
+                        media="(max-width: 480px)" />
+
+      <source srcset="images/museum-720x.jpg,
+                        images/museum-1440x.jpg 2x,
+                        images/museum-2160x.jpg 3x" 
+                        media="(max-width: 720px)" />
+
+      <source srcset="images/museum-960x.jpg,
+                        images/museum-1920x.jpg 2x,
+                        images/museum-2880x.jpg 3x" 
+                        media="(max-width: 959px)" />
+
+      <source srcset="images/museum-480x480.jpg,
+                        images/museum-960x960.jpg 2x,
+                        images/museum-1440x1440.jpg 3x" 
+                        media="(max-width: 960px)" />
+
+      <source srcset="images/museum-640x640.jpg,
+                        images/museum-1280x1280.jpg 2x,
+                        images/museum-1920x1920.jpg 3x" 
+                        media="(max-width: 1280px)" />
+
+      <source srcset="images/museum-800x800.jpg,
+                        images/museum-1600x1600.jpg 2x,
+                        images/museum-2400x2400.jpg 3x" 
+                        media="(max-width: 1600px)" />
+
+      <img class="orig-img" src="images/museum.jpg" alt="bench in a museum">
+    </picture>
 
   </header>
 </body>
